--- a/nodejs/modulos/http/package.json
+++ b/nodejs/modulos/http/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "rotas",
+  "name": "http",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -9,5 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^5.1.0"
+  },
+  "devDependencies": {}
 }
